<resources>
    <string name="app_name">福喵</string>
    <string name="user_account_hint">请输入账号</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="quit_app_tips">再按一次退出程序</string>
    <string name="user_agreement">《福喵用户服务协议》</string>
    <string name="user_agreement_tips">我已阅读并同意</string>
    <string name="input_phone_tips">请输入手机号码</string>
    <string name="login_success">登录成功</string>
    <string name="account_password_empty_tips">账号或密码不能为空</string>
    <string name="login">登 录</string>
    <string name="merchant_register">商户注册</string>
    <string name="phone_verification_mismatch">手机号与验证码不匹配</string>
    <string name="home">首页</string>
    <string name="back_to_top">回到顶部</string>
    <string name="msg">消息</string>
    <string name="me">我的</string>
    <string name="pay_code">收款码</string>
    <string name="checkout">收银通道</string>
    <string name="cash_device">收款工具</string>
    <string name="store_manage">管理门店</string>
    <string name="store_clerk">管理店员</string>
    <string name="help_core">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="store_msg">门店信息</string>
    <string name="change_phone">更换登录手机号</string>
    <string name="change_password">修改登录密码</string>
    <string name="change_manager_password">修改安全密码</string>
    <string name="pay_switch">支付开关</string>
    <string name="voice_switch">收款语音提醒</string>
    <string name="notif_switch">通知栏显示信息详情</string>
    <string name="clear_cache">清理缓存</string>
    <string name="about_app">关于福喵</string>
    <string name="store_head">门店照片</string>
    <string name="store_name">门店名称</string>
    <string name="main_camp_type">主营类目</string>
    <string name="store_addr">门店地址</string>
    <string name="store_info">门店信息</string>
    <string name="store_info_setting">编辑门店信息</string>
    <string name="location">省市区:</string>
    <string name="clear_success">清理成功!</string>
    <string name="clear_all">是否清空所有？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="logout_success">退出登录成功!</string>
    <string name="login_out">是否退出账号？</string>
    <string name="member_forget_password_tips">若忘记密码，请联系店长修改</string>
    <string name="apply_success">申请成功！</string>
    <string name="keep_success">保存成功</string>
    <string name="keep_fail">保存失败</string>
    <string name="lack_authority">权限不足</string>
    <string name="wait_pay">等待支付</string>
    <string name="pay_success">收款成功</string>
    <string name="pay_fail">收款失败</string>
    <string name="cancel_paid">取消交易</string>
    <string name="money_icon">￥</string>
    <string name="origin_order_no">原收款单号</string>
    <string name="refund_order_no">退款流水单号</string>
    <string name="origin_order_detail">原收款详情</string>
    <string name="refund_detail">退款详情</string>
    <string name="refund">退款</string>
    <string name="order_store">交易门店</string>
    <string name="order_refund_store">退款门店</string>
    <string name="order_refund_amount">退款金额</string>
    <string name="settlement_amount">结算金额</string>
    <string name="refund_success">退款成功</string>
    <string name="order_no">订单编号</string>
    <string name="cancel_order">取消订单</string>
    <string name="transaction_amount">交易金额</string>
    <string name="login_password">登录密码</string>
    <string name="confirm_cancel_order">是否确定取消订单？</string>
    <string name="refund_amount">退款金额(元)</string>
    <string name="transaction_status">交易状态</string>
    <string name="refund_time">退款时间</string>
    <string name="refund_type">退款方式</string>
    <string name="refund_store">退款门店</string>
    <string name="refund_person">退款人</string>
    <string name="change_phone_text">更换手机号后，将使用新手机号登录</string>
    <string name="inform_title">福喵动态通知中心！</string>
    <string name="station_inform">站内通知</string>
    <string name="my_service">我的客服</string>
    <string name="service_title">客服助手小喵正在为您服务!</string>
    <string name="station_content">福喵动态通知中心!</string>
    <string name="manager_password">安全密码</string>
    <string name="current_version">当前版本:</string>
    <string name="version_tips">当前已经是最新版本了</string>
</resources>
