<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<com.fumiao.pay.widget.MyNestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/me_bg"
        android:gravity="center"
        android:orientation="vertical">
            <com.fumiao.core.widget.CircleImageView
                android:id="@+id/shop_head"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:src="@mipmap/home_head"/>
            <TextView
                android:id="@+id/store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#454545"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/font_actionbar_title"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="福喵小店"/>
            <LinearLayout
                android:id="@+id/label_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_layout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="22dp">
            <LinearLayout
                android:id="@+id/lin_collection_tool"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:src="@mipmap/ic_collect_code"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_content"
                    android:layout_marginTop="12dp"
                    android:textColor="#363636"
                    android:text="@string/cash_device"/>
            </LinearLayout>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_theme" />
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_theme" />
            <LinearLayout
                android:id="@+id/lin_store_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:src="@mipmap/ic_store_info"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_content"
                    android:layout_marginTop="12dp"
                    android:textColor="#363636"
                    android:text="@string/store_info"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/ContentStyle"
            android:layout_marginTop="5dp"
            android:divider="@drawable/line"
            android:orientation="vertical"
            android:showDividers="middle">
            <com.fumiao.core.widget.ItemArrowLayout
                android:id="@+id/btn_shop"
                android:visibility="gone"
                style="@style/MeItem"
                app:icon="@mipmap/ic_shop"
                app:text="@string/store_manage"/>
            <com.fumiao.core.widget.ItemArrowLayout
                android:id="@+id/btn_merchant_info"
                android:visibility="gone"
                style="@style/MeItem"
                app:icon="@mipmap/ic_merchant_info"
                app:text="商户信息"/>
            <com.fumiao.core.widget.ItemArrowLayout
                android:id="@+id/btn_manage"
                style="@style/MeItem"
                app:icon="@mipmap/ic_manage"
                app:text="@string/store_clerk"/>
            <com.fumiao.core.widget.ItemArrowLayout
                android:id="@+id/btn_help"
                style="@style/MeItem"
                app:icon="@mipmap/ic_help"
                app:text="@string/help_core"/>
            <com.fumiao.core.widget.ItemArrowLayout
                android:id="@+id/btn_feedback"
                android:visibility="gone"
                style="@style/MeItem"
                app:icon="@mipmap/ic_feedback"
                app:text="@string/feedback"/>
        </LinearLayout>
        <com.fumiao.core.widget.ItemArrowLayout
            android:id="@+id/btn_setting"
            style="@style/MeItem"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            app:icon="@mipmap/ic_setting"
            app:text="@string/setting"/>
    </LinearLayout>
</com.fumiao.pay.widget.MyNestedScrollView>
</RelativeLayout>