<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        <com.fumiao.core.widget.ItemArrowLayout
            android:id="@+id/order_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:arrow_visibility="false"
            app:des=""
            app:text="@string/order_no"></com.fumiao.core.widget.ItemArrowLayout>

        <com.fumiao.core.widget.ItemArrowLayout
            android:id="@+id/order_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:arrow_visibility="false"
            app:des=""
            app:text="@string/order_store"></com.fumiao.core.widget.ItemArrowLayout>

        <com.fumiao.core.widget.ItemArrowLayout
            android:id="@+id/order_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:arrow_visibility="false"
            app:des="0元"
            app:text="@string/transaction_amount"></com.fumiao.core.widget.ItemArrowLayout>
        <com.fumiao.core.widget.ItemArrowLayout
            android:id="@+id/refundable_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:arrow_visibility="false"
            app:des="0元"
            app:text="可退款金额"></com.fumiao.core.widget.ItemArrowLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="15dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_content"
                android:textColor="@color/font_content"
                android:text="@string/order_refund_amount"/>

            <EditText
                android:id="@+id/refund_amount_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_content"
                android:layout_weight="1"
                android:textColor="@color/font_content"
                android:inputType="numberDecimal"
                style="@style/ed_defult"
                android:hint="请输入退款金额"
                android:gravity="right"
                android:textCursorDrawable="@null"
                android:background="@null"
                android:layout_toLeftOf="@+id/yuan_unit"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/yuan_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/font_content"
                android:textColor="@color/font_content"
                android:text="元"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_content"
                android:textColor="@color/font_content"
                android:text="@string/manager_password"/>

            <EditText
                android:id="@+id/oil_edit_text"
                android:textColor="@color/font_content"
                style="@style/ed_defult"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="right"
                android:hint="请输入安全密码"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:background="@null"
                android:textSize="@dimen/font_content" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="20dp"
        android:text="@string/confirm"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        android:background="@drawable/btn_press_bg"
        android:layout_gravity="center"
        android:textSize="@dimen/font_title" />


</LinearLayout>